--- a/notebooks/eda_task_1.ipynb
+++ b/notebooks/eda_task_1.ipynb
@@ -2,42 +2,139 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# 1. Import necessary libraries and custom scripts\n",
+    "import pandas as pd\n",
+    "from scripts.data_processing import load_data\n",
+    "from scripts.data_processing import summarize_data, check_missing_values, check_data_types, detect_outliers\n",
+    "from scripts.visualizations import plot_histogram, plot_bar_chart, plot_correlation_matrix, plot_scatter\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing required libraries\n",
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "from scripts.data_processing import load_data, clean_data, prepare_features\n",
-    "from scripts.visualizations import plot_correlation_heatmap, plot_feature_distribution\n",
+    "# 2. Load the data from CSV file\n",
+    "file_path = '../data/MachineLearningRating_v3.txt'  # Path to your dataset\n",
+    "df = load_data(file_path)\n",
     "\n",
-    "# Step 1: Load Data\n",
-    "file_path = \"../data/MachineLearningRating_v3.txt\"\n",
-    "data = load_data(file_path)\n",
     "\n",
-    "# Step 2: Clean Data\n",
-    "cleaned_data = clean_data(data)\n",
+    "# Check if the data loaded correctly\n",
+    "print(f\"Data loaded successfully: {df is not None}\")\n",
+    "print(df.head())  # Show the first few rows of the dataframe"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Data Summary\n",
+    "print(\"Data Summary:\")\n",
+    "print(summarize_data(df))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Check for Missing Values\n",
+    "print(\"\\nMissing Values:\")\n",
+    "print(check_missing_values(df))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Data Types of Each Column\n",
+    "print(\"\\nData Types:\")\n",
+    "print(check_data_types(df))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6. Univariate Analysis\n",
+    "# Example: Plot histograms for numerical columns\n",
+    "plot_histogram(df, 'TotalPremium')\n",
+    "plot_histogram(df, 'TotalClaims')\n",
     "\n",
-    "# Step 3: Feature Engineering\n",
-    "prepared_data = prepare_features(cleaned_data)\n",
+    "# Example: Plot bar charts for categorical columns\n",
+    "plot_bar_chart(df, 'Gender')\n",
+    "plot_bar_chart(df, 'MaritalStatus')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. Bivariate and Multivariate Analysis\n",
+    "# Correlation matrix for numerical columns\n",
+    "numeric_cols = ['TotalPremium', 'TotalClaims', 'CalculatedPremiumPerTerm', 'SumInsured']\n",
+    "plot_correlation_matrix(df, numeric_cols)\n",
     "\n",
-    "# Step 4: Exploratory Data Analysis\n",
-    "# Correlation Heatmap\n",
-    "plot_correlation_heatmap(prepared_data)\n",
+    "# Scatter plot for TotalPremium vs TotalClaims\n",
+    "plot_scatter(df, 'TotalPremium', 'TotalClaims')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
-    "# Feature distribution plots\n",
-    "for feature in ['Feature_1', 'Feature_2']:  # replace with actual features\n",
-    "    plot_feature_distribution(prepared_data, feature)\n",
+    "# 8. Outlier Detection\n",
+    "# Detect outliers in TotalPremium and TotalClaims\n",
+    "outliers_premium = detect_outliers(df, 'TotalPremium')\n",
+    "outliers_claims = detect_outliers(df, 'TotalClaims')\n",
     "\n",
-    "# Additional analysis and visualizations can go here\n"
+    "print(f\"Outliers in TotalPremium:\\n{outliers_premium}\")\n",
+    "print(f\"Outliers in TotalClaims:\\n{outliers_claims}\")\n",
+    "\n",
+    "# Additional visualizations can be added here"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
